[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "developer-study-helper"
version = "0.1.0"
description = "CLI AI agent - coding help, interview prep, resume review, progress tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
voice = [
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.14",
]

[project.scripts]
study-helper = "study_helper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/study_helper"]

[tool.hatch.build.targets.sdist]
include = ["src/study_helper"]
